# rust.sandbox

./: .gitignore  readme.md
exercism/: Cargo.toml  task.todo
exercism/src/: 1.sublist.rs  10.gigasecond.rs  11.clock.rs  12.anagrams.rs  13.allergies.rs  15.robot_simulator.rs  16.RECTANGLE.rs  17.bowling.rs  18.school.rs  19.forth.rs  2.assembly_line.rs  20.chess.rs  3.health_statistics.rs  4.low_power_embedded_game.rs  5.role_game.rs  6.magazine_cutout.rs  7.short-fibonacci.rs  8.reverse_polish_notation.rs  9.reverse_string.rs  main.rs  main_t.rs  role_game.rs  test.rs
jon-gjengset/lifetimes/: readme.md
jon-gjengset/lifetimes/src/: lib.rs  lib_a.rs  lib_b.rs  lib_c.rs  lib_d.rs  lib_e.rs  lib_f.rs
lets-get-rusty/rust-lang-book/: Cargo.toml  readme.md
lets-get-rusty/rust-lang-book/others/chapter-7/: readme.md
lets-get-rusty/rust-lang-book/others/chapter-7/crate/: Cargo.toml
lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/: Cargo.toml
lets-get-rusty/rust-lang-book/src/: 1.guess_number.rs  10.1.generic.rs  10.2.traits.rs  10.3lifetimes.rs  11.1.closures.rs  11.2.closures.rs  11.3.iterators.rs  11.4.iteratorWithClosures.rs  12.0.smartPointers.rs  12.1.DerefTrait.rs  12.smartPointers.rs  2.types.rs  4.struct.rs  5.enum.rs  7.1.vectors.rs  8.2.string_hashmap.rs  9.error_handling.rs  main.rs  ownership.rs
practise/echo-play/: readme.md
practise/echo-play/echo-client-tokio/src/: main.rs
practise/echo-play/echo-server-karin/src/: main.rs
practise/echo-play/echo-server-sirocco/: Cargo.toml
practise/echo-play/echo-server-sirocco/src/: main.rs
practise/playground/echo-play/: readme.md
practise/playground/echo-play/echo-client-std/src/: main.rs
practise/playground/echo-play/echo-client-tokio/: Cargo.toml
practise/playground/echo-play/echo-client-tokio/src/: main.rs
practise/playground/echo-play/echo-server-karin/: Cargo.toml
practise/playground/echo-play/echo-server-karin/src/: main_sync.rs
practise/playground/echo-play/echo-server-sirocco/: readme.md  readme.me
practise/playground/grpc-demo/: Cargo.toml  task.todo
practise/playground/grpc-demo/proto/: store.proto
practise/playground/grpc-demo/src/: cli.rs  lib.rs  main.rs  server.rs
practise/playground/grpc-demo/v1/: Cargo.toml  readme.md
practise/playground/grpc-demo/v1/src/: main.rs  server.rs  store.rs
practise/playground/grpc-demo/v2/: .env  Cargo.toml  build.rs  readme.md  store.db  task.todo
practise/playground/my-redis/: readme.md
practise/playground/my-redis/examples/: hello-redis.rs
practise/playground/my-redis/src/: main.rs  main_a.rs
practise/playground/nostr-backup/: Cargo.toml  _backup.json  readme.md  task.todo
practise/playground/nostr-backup/src/: args.rs  lib.rs  main.rs
practise/playground/nostr-backup/src/constants/: mod.rs
practise/playground/nostr-backup/src/enums/: mod.rs
practise/playground/nostr-backup/src/services/: account.rs  backup.rs  key_converter.rs  mod.rs  sandbox.rs
practise/playground/nostr-backup/src/structs/: peers.rs
practise/playground/nostr-backup/src/utils/: cli.rs  key_converter.rs  mod.rs  relay.rs
practise/playground/poll/client/: Cargo.toml
practise/playground/secure-hyper/: Cargo.toml
practise/playground/secure-hyper/certificates/: rusty.pem  rusty.rsa
practise/playground/secure-hyper/src/: main.rs
practise/playground/tcp-socket/: readme.md
practise/playground/tcp-socket/src/: main_a.rs  main_b.rs  main_c.rs  main_d.rs
practise/playground/tls/tlsclient/: Cargo.toml  readme.md
practise/playground/tls/tlsclient/src/: args.rs  client_config.rs  lib.rs  main.rs  tls_client.rs
practise/playground/tls/tlsserver/: Cargo.toml  readme.md  task.todo
practise/playground/tls/tlsserver/src/: args.rs  lib.rs  main.rs  open_connection.rs  server_config.rs  server_mode.rs  tls_server.rs
practise/playground/todo-notifier/: Cargo.toml
practise/playground/todo-notifier/src/: file.rs  lib.rs  main.rs  status.rs  task.rs
practise/playground/warp-websocket-server/: Cargo.toml  readme.md
practise/playground/warp-websocket-server/src/: main.rs
practise/playground/warp-websocket-server/static/: 404.html  index.html  main.css  main.js
practise/tcp-socket/: Cargo.toml
practise/tcp-socket/src/: main.rs
practise/theory/asynchronous/: Cargo.toml
practise/theory/asynchronous/src/: futurama.rs  lib.rs  main.rs
practise/theory/common_mistakes/: Cargo.toml
practise/theory/common_mistakes/src/: main.rs
practise/traits/aggregate/: Cargo.toml
practise/traits/aggregate/src/: main.rs
ryan-levick/kvstore/: kv.db  readme.md
ryan-levick/kvstore/src/: part_1.rs
ryan-levick/lifetimes/src/: lib.rs
ryan-levick/myvec/: readme.md
ryan-levick/myvec/src/: lib.rs
ryan-levick/threadpool/: readme.md
ryan-levick/threadpool/src/: lib.rs  lib_a.rs
snippets/slices/src/: 0.test_slices.rs  1.sublist.rs  main.rs
(+21 files in other folders)
