[package]
name = "secure-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
tokio-rustls = { version = "0.23.4", default-features = false }
rustls = { version = "0.20.8", default-features = false, features = ["tls12"] }
rustls-pemfile = "1.0.2"
hyper = { version = "0.14.25", default-features = false, features = ["full"] }
futures-util = "0.3.27"
