[package]
name = "todo-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
zbus = "3.14.1"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
chrono = "0.4.26"