[package]
name = "tlsserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.0"
mio = { version = "0.8.6", features = ["net", "os-poll"] }
log = { version = "0.4.4", optional = true }
env_logger = "0.10.0"